# WhiskiWrap

./: .gitignore  AGENTS.md  MANIFEST.in  README.md  apply_whiski.py  combine_sides.py  create_video_whiski.py  gnn_requirements.txt  plot_overlay.py  pyproject.toml  reclassify.py  requirements.txt  setup.py  test_gnn_integration.py  trace_whiskers.py  unet_classifier.py  whisker_tracking.py  whisker_tracking_pipeline.py  whiskerpad.py
.github/workflows/: ci.yml
WhiskiWrap/: __init__.py  base.py  io.py  load_whisker_data.py  mfile_io.py  pipeline.py  reassess_wid.py  tests.py  utils.py  video_utils.py  wfile_io.py
examples/: README.md  extract_and_classify_segments.py  extract_segment_and_track.py  run_whisker_tracking.py
notebooks/: plot_angle_trace.ipynb  plot_overlay.ipynb  plot_overlay_2sides.ipynb
tests/: test_cli_scripts.py  test_gnn_integration.py  tests.py
wwutils/: __init__.py  bootstrap.py  check_gpu.py  combine_sides.py  dataload.py  load_ffmpeg_lib_example.py  lock_module.py  misc.py  plot.py  plots.py  reclassify.py  test_load_ffmpeg_lib.py  train_unet.py  video.py  whisk_permissions.py  whiskerpad.py
wwutils/classifiers/: README.md  README_GNN.md  __init__.py  benchmark_classifiers.py  gnn_classifier.py  gnn_requirements.txt  gnn_whisker_tracker.py  reclassify.py  train_gnn.py
wwutils/data_manip/: combine_sides.py  combine_whisker_files.py  load_data.py
wwutils/video_utils/: create_video_whiski.py  extract_video_segments.py  video.py
